--- a/Frontend/tsconfig.app.json
+++ b/Frontend/tsconfig.app.json
@@ -8,6 +8,14 @@
     "module": "ESNext",
     "skipLibCheck": true,
 
+    //Frrom shadcn
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ]
+    },
+
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
